<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameFragment">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_subtitle"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubtitle" />

    <TextView
        android:id="@+id/textStatsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_stats_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_stats"
        app:layout_constraintBottom_toTopOf="@+id/btnPaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStatsLabel"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/textResultGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_result_game"
        app:layout_constraintBottom_toTopOf="@+id/btnPaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStats"
        app:layout_constraintVertical_bias="0.22000003" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnPaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultGame"
        app:layout_constraintVertical_bias="0.16000003">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgResultComputer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/img_description_result_computer"
                android:src="@drawable/paper" />

            <TextView
                android:id="@+id/textComputer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_computer_result_label" />
        </LinearLayout>

        <TextView
            android:id="@+id/textVs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/text_vs_label"
            android:textSize="32sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgResultYou"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/img_description_result_you"
                android:src="@drawable/paper" />

            <TextView
                android:id="@+id/textYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_your_result_label" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnRock"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/btn_rock_description"
        android:scaleType="centerCrop"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPaper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnPaper"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/btn_paper_description"
        android:scaleType="centerCrop"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnScissors"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnRock" />

    <ImageButton
        android:id="@+id/btnScissors"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/btn_scissors_description"
        android:scaleType="centerCrop"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPaper" />

</androidx.constraintlayout.widget.ConstraintLayout>
