<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clItemGame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtGameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_result_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtGameDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_game_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGameResult" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGameDate">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgGameResultComputer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/img_description_result_computer"
                android:src="@drawable/paper" />

            <TextView
                android:id="@+id/textComputer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_computer_result_label" />
        </LinearLayout>

        <TextView
            android:id="@+id/textVs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/text_vs_label"
            android:textSize="32sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgGameResultYou"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/img_description_result_you"
                android:src="@drawable/paper" />

            <TextView
                android:id="@+id/textYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_your_result_label" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
